# mac-config-toolkit

./: .env.example  README.md  pyproject.toml
src/mac-config-toolkit/: constants.py  main.py  utils.py
